chore: Update .env.example and .gitignore; add langchain_core to requirements.txt

--- a/.env.example
+++ b/.env.example
@@ -15,9 +15,10 @@ LLM_API_KEY=""
 # --- Secondary (Small) Model Configuration (Optional) ---
 # If you leave these values empty, they will automatically fall back to using the
 # primary model's configuration settings above.
-LLM_ENDPOINT_SMALL=""
-LLM_MODEL_NAME_SMALL=""
-LLM_NUM_CTX_SMALL=""
+#LLM_ENDPOINT_SMALL=""
+#LLM_MODEL_NAME_SMALL=""
+#LLM_NUM_CTX_SMALL=""
+
 STT_SERVER_URL="http://<IP_OF_FASTER_WHISPER_SERVER>:8000/v1/audio/transcriptions"
 TTS_ENGINE="coqui"
 TTS_SERVER_URL="http://<IP_OF_COQUI_OR_PIPER_SERVER>:<PORT>/api/tts"
